--- a/src/app/housing-location/housing-location.component.css
+++ b/src/app/housing-location/housing-location.component.css
@@ -16,6 +16,9 @@
 .listing-location {
   padding: 10px 20px 20px 20px;
 }
+.listing-units {
+  padding: 10px 20px 20px 20px;
+}
 .listing-location::before {
   content: url("/assets/location-pin.svg") / "";
 }
